--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <% if notice %><p class = 'alert alert-warning'><%= notice %></div><% end %>
+    <% if alert %><p class = 'alert alert-danger'><%= alert %></p><% end %>
     <%= yield %>
   </body>
 </html>
