--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,83 @@
-<h2>Sign up</h2>
+<div class = "container">
+  <div class="row justify-content-center">
+    <div class = "col-7">
+    <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class = "form-group row">
+        <%= f.label :name, "名前", class: 'col-5' %>
+
+        <div class="col-7">
+          <%=
+            f.text_field :name,
+            class: "form-control",
+            autofocus: "true",
+            required: '',
+            autocomplete: 'name',
+            placeholder: "ユーザー1"
+          %>
+        </div>
+      </div>
+
+      <div class = "form-group row">
+        <%= f.label :email, "メールアドレス", class: 'col-5' %>
+
+        <div class="col-7">
+          <%=
+            f.email_field :email,
+            class: "form-control",
+            autofocus: "true",
+            required: '',
+            autocomplete: 'email',
+            placeholder: "メールアドレス"
+          %>
+        </div>
+      </div>
+
+      <div class = "form-group row">
+        <div class = "col-5">
+          <%= f.label :password, "パスワード" %>
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %>文字以上)</em>
+          <% end %>
+        </div>
+        <div class="col-7">
+          <%=
+            f.password_field :password,
+            class: "form-control",
+            autofocus: "true",
+            required: '',
+            placeholder: "パスワード"
+          %>
+        </div>
+      </div>
+
+      <div class = "form-group row">
+        <%= f.label :password_confirmation, "パスワード確認", class: 'col-5' %>
+
+        <div class="col-7">
+          <%=
+            f.password_field :password,
+            class: "form-control",
+            autofocus: "true",
+            required: '',
+            placeholder: "パスワード確認"
+          %>
+        </div>
+      </div>
+
+      <div class='form-group text-center'>
+        <%= f.submit "新規登録", class: 'btn' %>
+      </div>
+    <% end %>
+
+    <hr>
+    
+    <div class='form-group text-center'>
+      <%= render 'users/shared/links' %>
+    </div>
+
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
