--- a/app/views/users/mailer/confirmation_instructions.html.erb
+++ b/app/views/users/mailer/confirmation_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>ユーザー登録を完了してください。</p>
 
-<p><%= link_to 'メールアドレス確認', controller: 'users/confirmations', action: 'create', confirmation_token: @token %></p>
+<p><%= link_to "メールアドレス確認", controller: 'users/confirmations', action: 'create', confirmation_token: @token %></p>
 
 <p>心当たりがない場合は、本メッセージは破棄してください。</p>
 
