--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,6 +1,6 @@
-<div class = "container">
-  <div class="row justify-content-center">
-    <div class = "col-7">
+<div class = 'container'>
+  <div class='row justify-content-center'>
+    <div class = 'col-7'>
     <h2>Forgot your password?</h2>
 
     <p>
@@ -8,17 +8,18 @@
       パスワード再発行用のメールをお送りします。
     </p>
 
-    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-      <%= render "users/shared/error_messages", resource: resource %>
+    <%= form_with(model: resource, scope: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+    <!---- form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| ----->
+      <%= render 'users/shared/error_messages', resource: resource %>
 
-      <div class = "form-group row">
+      <div class = 'form-group row'>
         <%= f.label :email, "メールアドレス", class: 'col-5' %>
 
-        <div class="col-7">
+        <div class='col-7'>
           <%=
             f.email_field :email,
-            class: "form-control",
-            autofocus: "true",
+            class: 'form-control',
+            autofocus: 'true',
             required: '',
             autocomplete: 'email',
             placeholder: "メールアドレス"
@@ -26,7 +27,7 @@
         </div>
       </div>
 
-    <div class = "form-group text-center">
+    <div class = 'form-group text-center'>
       <%= f.submit "送信", class: 'btn' %>
     </div>
 
