--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -2,7 +2,9 @@
   <div class='row justify-content-center'>
     <div class = 'col-7'>
     <h2>Sign up</h2>
-    <%= form_with(model: resource, scope: resource_name, url: registration_path(resource_name)) do |f| %>
+
+    <!--- form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| --->
+    <%= form_with(model: @user, scope: resource_name, url: user_registration_path) do |f| %>
     <!---- form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| --->
       <%= render 'users/shared/error_messages', resource: resource %>
 
