--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,7 +1,6 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<!------ form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %---->
-<%= form_with(model: resource, scope: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_with model: @user, url: user_registration_path, html: { method: :put }, local: true do |f| %>
 
   <%= render 'users/shared/error_messages', resource: resource %>
 
