modify_admin_view

--- a/app/views/admin/show_user.html.erb
+++ b/app/views/admin/show_user.html.erb
@@ -1,7 +1,12 @@
-<h3>ユーザーページ</h3>
-<p>ユーザー名：<%= @user.name %>
-<p>メール：<%= @user.email %>
-<p>投稿数：
-<p>最終ログイン：<%= @user.last_sign_in_at %>
-  <hr />
-  投稿が流れていく予定
+<main class="container">
+  <div class="text-center">
+    <h3>ユーザーページ</h3>
+  </div>
+  <p>ユーザー名：<%= @user.name %>
+  <p>メール：<%= @user.email %>
+  <p>投稿数：
+  <p>最終ログイン：<%= @user.last_sign_in_at %>
+    <hr />
+    投稿が流れていく予定
+    ・・・
+</main>
