--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
         <%= link_to "お気に入り一覧", '#', class: 'nav-link' %>
       </li>
       <li class='nav-item'>
-        <%= link_to "投稿", '#', class: 'nav-link' %>
+        <%= link_to "投稿", 'post_path', class: 'nav-link' %>
       </li>
       <li class='nav-item'>
         <%= link_to "ユーザー名", '#', class: 'nav-link' %>
