create partial for post

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,4 @@
-<h1>ハッカソンテスト　USERS/INDEX　とばすよ</h1>
-<p>これが確認できるということは、ちゃんととばせてるね</p>
+<div class="container">
+  <h1>ハッカソンテスト　USERS/INDEX　とばすよ</h1>
+  <p>これが確認できるということは、ちゃんととばせてるね</p>
+</div>
