create prototype of post_page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>ログイン後の画面</h1>
+  <h1>投稿する</h1>
   <%= render'layouts/post'%>
-  <%= @posts.all %>
+  <%= @posts %>
 </div>
