--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
         <%= link_to "お気に入り一覧", '#', class: 'nav-link' %>
       </li>
       <li class='nav-item'>
-        <%= link_to "投稿", 'post_path', class: 'nav-link' %>
+        <%= link_to "投稿", posts_path, class: 'nav-link' %>
       </li>
       <li class='nav-item'>
         <%= link_to current_user.name, mypage_user_path(current_user.id), class: 'nav-link' %>
