--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
-  <% form_with model: @post local: true do |f| %>
-    <%= f.collection :direction, post.directions, { prompt:"選択してください"}, { class: "form-control" } %>
-    <%= f.collection (:station, @stations, :station_name, :station_name, { class: "form-control"} ) %>
+<div class="row">
+  <%= form_with model: @post, local: true do |f| %>
+    <%= f.select :direction, Post.directions, prompt:"選択してください", class: "form-control" %>
+    <%= f.collection_select :station_id, Station.all, :station_number, :station_name, prompt:"選択してください", class: "form-control" %>
     <%= f.date_field :time, default: { year: 2021, month: 4, day: 1 } %>
-    <%= f.collection :congestion_level, post.directions, { prompt:"選択してください"}, { class: "form-control" } %>
+    <%= f.select :congestion_level, Post.congestion_levels, prompt:"選択してください", class: "form-control" %>
     <%= f.text_field :comment %>
     <%= f.submit %>
   <% end %>
