--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -2,7 +2,8 @@
   <%= form_with model: @post, local: true do |f| %>
     <%= f.select :direction, Post.directions, prompt:"選択してください", class: "form-control" %>
     <%= f.collection_select :station_id, Station.all, :station_number, :station_name, prompt:"選択してください", class: "form-control" %>
-    <%= f.date_field :time, default: { year: 2021, month: 4, day: 1 } %>
+    <%= f.date_field :date, default: { year: 2021, month: 4, day: 1 } %>
+    <%= f.time_field :time %>
     <%= f.select :congestion_level, Post.congestion_levels, prompt:"選択してください", class: "form-control" %>
     <%= f.text_field :comment %>
     <%= f.submit %>
