--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -1,6 +1,8 @@
 <div class="row">
   <%= form_with model: @post, local: true do |f| %>
     <%= f.select :direction, Post.directions, prompt:"選択してください", class: "form-control" %>
+    <%= f.hidden_field :train_type,  value: 0 %>
+
     <%= f.collection_select :station_id, Station.all, :station_number, :station_name, prompt:"選択してください", class: "form-control" %>
     <%= f.date_field :date, default: { year: 2021, month: 4, day: 1 } %>
     <%= f.time_field :time %>
