--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,7 @@
 <body>
   <%= render 'layouts/header' %>
   <% if notice %><p class='alert alert-warning'><%= notice %></div><% end %>
-    <% if alert %>
-  <p class='alert alert-danger'><%= alert %></p><% end %>
+  <% if alert %><p class='alert alert-danger'><%= alert %></p><% end %>
   <%= yield %>
 </body>
 
