--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
   <%= form_with model: @post, local: true do |f| %>
-    <%= f.select :direction, Post.directions, prompt:"選択してください", class: "form-control" %>
-    <%= f.hidden_field :train_type,  value: 0 %>
-    <%= f.collection_select :station_id, Station.all, :station_number, :station_name, prompt:"選択してください", class: "form-control" %>
-    <%= f.date_field :date, default: { year: 2021, month: 4, day: 1 } %>
-    <%= f.time_field :time %>
-    <%= f.select :congestion_level, Post.congestion_levels, prompt:"選択してください", class: "form-control" %>
-    <%= f.text_field :comment %>
-    <%= f.submit %>
+  <%= f.select :direction, Post.directions.keys.map {|k| [k, k]}, prompt:"選択してください", class: "form-control" %>
+  <%= f.hidden_field :train_type,  value: "快速急行/Fライナー" %>
+  <%= f.collection_select :station_id, Station.all, :id, :station_name, prompt:"選択してください", class: "form-control" %>
+  <%= f.date_field :date, default: { year: 2021, month: 4, day: 1 } %>
+  <%= f.time_field :time %>
+  <%= f.select :congestion_level, Post.congestion_levels.keys.map {|k| [k, k]}, prompt:"選択してください", class: "form-control" %>
+  <%= f.text_field :comment %>
+  <%= f.submit %>
   <% end %>
 </div>
