--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,6 +9,8 @@
     <li>ポストID：<%= post.id%></li>
     <li>投稿者：<%= post.user.name%></li>
     <li>日付：<%= post.date%></li>
+    <li>曜日：<%= post.day_of_week %></li>
+    <li>時刻：<%= post.time %>時</li>
     <li>駅：<%= post.station.station_name%></li>
     <li>方面：<%= post.direction%></li>
     <li>混雑具合：<%= post.congestion_level%></li>
