mypost表示周り仮実装

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1>ハッカソンテスト　USERS/INDEX　とばすよ</h1>
-  <p>これが確認できるということは、ちゃんととばせてるね</p>
+  <h1>アプリの説明のページ</h1>
+  
 </div>
