--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-    <div>
-        <h1>Congestion_level graph</h1>
-
+    <div class="row">
+        <div class="col-6 bgred">    
+            <h1>Congestion_level graph</h1>
             <%= column_chart @graph,
                  id: 'total-attendance-chart',
                  width: '400px',
@@ -10,23 +10,22 @@
                  ytitle: "混雑状況",
                  colors: ['#06b'] 
             %>
-    </div>
-    <div>
-        <h1>Home#index</h1>
-        <h3 class="page-header">投稿一覧</h3>
-        <ul class="list-group">
-        <% @posts.each do |post| %>
+        </div>
+        <div class="col-6 bgred">
+            <h1>Home#index</h1>
+            <h3 class="page-header">投稿一覧</h3>
+            <ul class="list-group">
+            <% @posts.each do |post| %>
                <li class="list-group-item">
-           <div>名前:<%= post.user.name %></div>
-           <div><%= post.direction %>方面&ensp; 
-            駅名:<%= post.station.station_name %>&ensp; 
-           <%= post.time %>時頃</div>
-           <div>コメント:<%= post.comment %>&ensp; 
-              混雑度:<%= post.congestion_level %></div>
-         </li>
-        <% end %>
-        </ul>
+                <div>名前:<%= post.user.name %></div>
+                <div><%= post.direction %>方面&ensp; 
+                駅名:<%= post.station.station_name %>&ensp; 
+                <%= post.time %>時頃</div>
+                <div>コメント:<%= post.comment %>&ensp; 
+                 混雑度:<%= post.congestion_level %></div>
+                </li>
+            <% end %>
+            </ul>
+        </div>
     </div>
-
-
 </div>
