--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -4,7 +4,7 @@
   <%= f.hidden_field :train_type,  value: "快速急行/Fライナー" %>
   <%= f.collection_select :station_id, Station.all, :id, :station_name, prompt:"選択してください", class: "form-control" %>
   <%= f.date_field :date, default: { year: 2021, month: 4, day: 1 } %>
-  <%= f.time_field :time %>
+  <%= f.number_field :time %>
   <%= f.select :congestion_level, Post.congestion_levels.keys.map {|k| [k, k]}, prompt:"選択してください", class: "form-control" %>
   <%= f.text_field :comment %>
   <%= f.submit %>
