--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "メイン", home_index_path, class: 'nav-link' %>
       </li>
       <li class='nav-item'>
-        <%= link_to "「電車アプリとは」", '#', class: 'nav-link' %>
+        <%= link_to "「電車アプリとは」", about_path, class: 'nav-link' %>
       </li>
       <li class='nav-item'>
         <%= link_to "お気に入り登録", '#', class: 'nav-link' %>
@@ -42,7 +42,7 @@
         <%= link_to "メイン", root_path, class: 'nav-link' %>
       </li>
       <li class='nav-item'>
-        <%= link_to "「電車アプリとは」", '#', class: 'nav-link' %>
+        <%= link_to "「電車アプリとは」", about_path, class: 'nav-link' %>
       </li>
       <li class='nav-item'>
         <%= link_to "新規登録", new_user_registration_path, class: 'nav-link' %>
