--- a/app/views/admin/posts_index.html.erb
+++ b/app/views/admin/posts_index.html.erb
@@ -13,4 +13,9 @@
   </ul>
   <hr>
   <% end %>
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <%= paginate @posts %>
+    </ul>
+  </nav>
 </main>
