--- a/app/views/admin/users_index.html.erb
+++ b/app/views/admin/users_index.html.erb
@@ -13,4 +13,9 @@
     </span>
     <hr>
     <% end %>
+  <nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center">
+      <%= paginate @users %>
+    </ul>
+  </nav>
 </main>
