--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class='col-md-6 my-4'>
+    <div class='col-md-6 my-4 intro'>
       <div class="row">
         <div class="col-1">
         </div>
