--- a/app/views/admin/posts_search.html.erb
+++ b/app/views/admin/posts_search.html.erb
@@ -10,6 +10,7 @@
   駅：<%= f.collection_select :station, Station.all, :id, :station_name, {prompt: "全選択"} , class: 'mr-4'%>
   <%= f.submit "検索", class: 'ml-4' %>
   <% end %>
+  <%= link_to "全投稿へ戻る", posts_index_path, class: 'btn btn-outline-primary' %>
   <hr>
   <% @posts.each do |post| %>
   <ul class="list-unstyled">
@@ -24,9 +25,4 @@
   </ul>
   <hr>
   <% end %>
-  <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-      <%= paginate @posts %>
-    </ul>
-  </nav>
 </main>
