--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,19 +1,94 @@
-<ul class='navbar-nav mx-auto'>
+<div class="container d-flex justify-content-center mt-3">
+  <div class="w-50">
+    <h1>マイページ</h1>
 
-  <li>
-    <%= link_to 'My posts', mypost_user_path(current_user.id) %>
-  </li>
+    <hr>
+    <%= link_to( mypost_user_path(current_user.id)) do %>
+    <div class="container">
+    <div class="d-flex justify-content-between">
+      <div class="row">
+        <div class="col-2 d-flex align-items-center">
+          <i class="fas fa-user fa-3x"></i>
+        </div>
+        <div class="col-9 d-flex align-items-center ml-2 mt-3">
+          <div class="d-flex flex-column">
+            <label for="user-name">My posts</label>
+            <p>textttttttttttttttt</p>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex align-items-center">
 
-  <li class='nav-item'>
-    <%= link_to "お気に入り登録", '#', class: 'nav-link' %>
-  </li>
+          <i class="fas fa-chevron-right fa-2x"></i>
+      </div>
+    </div>
+    </div>
+    <% end %>
+    <hr>
 
-  <li class='nav-item'>
-    <%= link_to "お気に入り一覧", '#', class: 'nav-link' %>
-  </li>
+    <div class="container">
+    <div class="d-flex justify-content-between">
+      <div class="row">
+        <div class="col-2 d-flex align-items-center">
+          <i class="fas fa-archive fa-3x"></i>
+        </div>
+        <div class="col-9 d-flex align-items-center ml-2 mt-3">
+          <div class="d-flex flex-column">
+            <label for="user-name">お気に入り登録</label>
+            <p>text2222222222222</p>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex align-items-center">
+      <%= link_to "お気に入り登録", '#', class: 'nav-link' %>
+          <i class="fas fa-chevron-right fa-2x"></i>
+      </div>
+    </div>
+  </div>
 
-  <li class='nav-item'>
-    <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
-  </li>
+  <hr>
 
-</ul>
+  <div class="container">
+      <div class="d-flex justify-content-between">
+        <div class="row">
+          <div class="col-2 d-flex align-items-center">
+            <i class="fas fa-map-marked fa-3x"></i>
+          </div>
+          <div class="col-9 d-flex align-items-center ml-3 mt-3">
+            <div class="d-flex flex-column">
+              <label for="user-name">お気に入り一覧</label>
+              <p></p>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex align-items-center">
+        <%= link_to "お気に入り一覧", '#', class: 'nav-link' %>
+            <i class="fas fa-chevron-right fa-2x"></i>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    <div class="container">
+      <div class="d-flex justify-content-between">
+        <div class="row">
+          <div class="col-2 d-flex align-items-center">
+            <i class="fas fa-sign-out-alt fa-3x"></i>
+          </div>
+          <div class="col-9 d-flex align-items-center ml-2 mt-3">
+            <div class="d-flex flex-column">
+              <label for="user-name">ログアウト</label>
+              <p>ログアウトします</p>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex align-items-center">
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            <i class="fas fa-chevron-right fa-2x"></i>
+        </div>
+      </div>
+  </div>
+</div>
+
+
