--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -3,7 +3,7 @@
     <h1>マイページ</h1>
 
     <hr>
-    <%= link_to( mypost_user_path(current_user.id)) do %>
+    <%= link_to( mypost_user_path(current_user.id), class:'nav-link' ) do %>
     <div class="container">
     <div class="d-flex justify-content-between">
       <div class="row">
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="d-flex align-items-center">
-
+              <div> aaaaaaaa</div>
           <i class="fas fa-chevron-right fa-2x"></i>
       </div>
     </div>
