--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -1,3 +1,4 @@
+<%= render'layouts/error_messages'%>
 <div class="row">
   <%= form_with model: @post, local: true do |f| %>
   <%= f.select :direction, Post.directions.keys.map {|k| [k, k]}, {prompt:"方面選択してください"}, class: 'form-control' %>
