--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -3,22 +3,22 @@
     <h1>マイページ</h1>
 
     <hr>
-    <%= link_to( mypost_user_path(current_user.id), class:'nav-link' ) do %>
+    <%= link_to( mypost_user_path(current_user.id),class: "decoration change") do %>
     <div class="container">
     <div class="d-flex justify-content-between">
       <div class="row">
-        <div class="col-2 d-flex align-items-center">
-          <i class="fas fa-user fa-3x"></i>
+        <div class="col-2 d-flex align-items-center ">
+          <i class="fas fa-user fa-3x "></i>
         </div>
-        <div class="col-9 d-flex align-items-center ml-2 mt-3">
-          <div class="d-flex flex-column">
+        <div class="col-9 d-flex align-items-center ml-2 mt-3 ">
+          <div class="d-flex flex-column margin-left">
             <label for="user-name">My posts</label>
             <p>textttttttttttttttt</p>
           </div>
         </div>
       </div>
       <div class="d-flex align-items-center">
-              <div> aaaaaaaa</div>
+
           <i class="fas fa-chevron-right fa-2x"></i>
       </div>
     </div>
