--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.margin-left {
+    margin-left: 20px;
+}
+
+.decoration {
+    text-decoration: none;
+    color: #000000;
+}
+
+a.change:hover {
+    text-decoration: none;
+    
+    }
