--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -18,21 +18,19 @@
     <% end %>
   </div>
   <hr>
-
   <div class="row">
     <div class="col-6 bgred">
-      <h1>Congestion_level graph</h1>
-      <%= column_chart @graph,
+    <h3>人混み予測</h3>
+    <%= column_chart @graph,
                 id: 'total-attendance-chart',
                 width: '400px',
                 height: '500px',
                 xtitle: "時間帯", 
                 ytitle: "混雑状況",
-                colors: ['#06b'] 
+                colors: ['#cec'] 
             %>
     </div>
     <div class="col-6 bgred">
-      <h1>Home#index</h1>
       <h3 class="page-header">投稿一覧</h3>
       <ul class="list-group">
         <div class='card'>
