スクレイピング追加

--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -18,6 +18,10 @@
     <% end %>
   </div>
   <hr>
+  <br>
+<div class="traffic"><u>西武鉄道の運行状況：<%= @traffic %></u></div>
+  <br>
+  <hr>
   <div class="row">
     <div class="col-6 bgred">
     <h3>人混み予測</h3>
