--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
 
-  <h1>ハッカソンテスト　USERS/INDEX　とばすよ</h1>
-  <p>これが確認できるということは、ちゃんととばせてるね</p>
+  <h1>投稿履歴/h1>
 
   <%# 投稿できているかのテスト %>
   <ul>
