--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -18,15 +18,17 @@
       </div>
     </div>
 
-    <div class='col-md-6'>
-      <small class="text-center">電車の混み具合を５段階で表示</small>
+    <div class='col-md-6 text-center'>
+      <small>電車の混み具合を５段階で表示</small>
       <%= image_tag "/images/graph.png", class: "img-thumbnail"%>
     </div>
   </div>
 
-  <div class='row'>
+  <div class='row my-5'>
     <div class='col-md-6 my-4 px-4'>
-      <small class='text-center'>ユーザーの投稿を見ることができます</small>
+      <div class='text-center'>
+        <small>ユーザーの投稿を見ることができます</small>
+      </div>
       <div class='card'>
         <div class='card-body'>
 
