--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -1,4 +1,6 @@
-<%= render'layouts/error_messages' %>
+<div class="row justify-content-md-center">
+  <%= render'layouts/error_messages' %>
+</div>
 
 <%= form_with model: @post, local: true do |f| %>
 <div class="row justify-content-evenly my-4">
