--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,11 +23,13 @@
       <h3>人混み予測</h3>
       <%= column_chart @graph,
                 id: 'total-attendance-chart',
+                min: 0,
+                max: 5, 
                 width: '400px',
                 height: '500px',
                 xtitle: "時間帯", 
                 ytitle: "混雑状況",
-                colors: ['#cec'] 
+                colors: ['#9c6'] 
             %>
     </div>
     <div class="col-6 bgred">
