--- a/app/views/home/search.html.erb
+++ b/app/views/home/search.html.erb
@@ -27,11 +27,15 @@
       <h3>人混み予測</h3>
       <%= column_chart @graph,
                 id: 'total-attendance-chart',
+                min: 0,
+                max: 5, 
                 width: '400px',
                 height: '500px',
                 xtitle: "時間帯", 
                 ytitle: "混雑状況",
-                colors: ['#cec'] 
+                colors: ['#9c6'],
+                loading: "Loading...",
+                empty:"投稿データがありません"
             %>
     </div>
     <div class="col-6 bgred">
