--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -8,86 +8,84 @@
     <div class="d-flex justify-content-between">
       <div class="row">
         <div class="col-2 d-flex align-items-center ">
-          <i class="fas fa-user fa-3x "></i>
+          <i class="fas fa-user fa-3x", style="color:#7acbe1"></i>
         </div>
         <div class="col-9 d-flex align-items-center ml-2 mt-3 ">
-          <div class="d-flex flex-column margin-left">
+          <div class="d-flex flex-column", style="width: 300px; margin-left: 6px">
             <label for="user-name">My posts</label>
-            <p>textttttttttttttttt</p>
+            <p>投稿の内容を確認できます</p>
           </div>
         </div>
       </div>
       <div class="d-flex align-items-center">
-
           <i class="fas fa-chevron-right fa-2x"></i>
       </div>
     </div>
     </div>
     <% end %>
     <hr>
-
+    <%= link_to( '#' , class: "decoration change") do %>
     <div class="container">
     <div class="d-flex justify-content-between">
       <div class="row">
         <div class="col-2 d-flex align-items-center">
-          <i class="fas fa-archive fa-3x"></i>
+          <i class="fas fa-check-circle fa-3x", style="color:#94c674"></i>
         </div>
         <div class="col-9 d-flex align-items-center ml-2 mt-3">
-          <div class="d-flex flex-column">
+          <div class="d-flex flex-column", style="margin-left: 13px">
             <label for="user-name">お気に入り登録</label>
-            <p>text2222222222222</p>
+            <p>お気に入りを登録できます</p>
           </div>
         </div>
       </div>
       <div class="d-flex align-items-center">
-      <%= link_to "お気に入り登録", '#', class: 'nav-link' %>
           <i class="fas fa-chevron-right fa-2x"></i>
       </div>
     </div>
   </div>
-
+  <% end %>
   <hr>
-
+  <%= link_to( '#', class: "decoration change") do %>
   <div class="container">
       <div class="d-flex justify-content-between">
         <div class="row">
           <div class="col-2 d-flex align-items-center">
-            <i class="fas fa-map-marked fa-3x"></i>
+          <i class="fas fa-align-left fa-3x", style="color:#f0821e"></i>
           </div>
           <div class="col-9 d-flex align-items-center ml-3 mt-3">
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column", style="margin-left: 4px">
               <label for="user-name">お気に入り一覧</label>
-              <p></p>
+              <p>お気に入りを確認できます</p>
             </div>
           </div>
         </div>
         <div class="d-flex align-items-center">
-        <%= link_to "お気に入り一覧", '#', class: 'nav-link' %>
             <i class="fas fa-chevron-right fa-2x"></i>
         </div>
       </div>
     </div>
-
+    <% end %>
     <hr>
-
+    <%= link_to( destroy_user_session_path, method: :delete, class: "decoration change" ) do %>
     <div class="container">
       <div class="d-flex justify-content-between">
         <div class="row">
           <div class="col-2 d-flex align-items-center">
-            <i class="fas fa-sign-out-alt fa-3x"></i>
+            <i class="fas fa-sign-out-alt fa-3x", style="color:#FF0000"></i>
           </div>
           <div class="col-9 d-flex align-items-center ml-2 mt-3">
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column", style="margin-left: 23px">
               <label for="user-name">ログアウト</label>
               <p>ログアウトします</p>
             </div>
           </div>
         </div>
         <div class="d-flex align-items-center">
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav-link' %>
+
             <i class="fas fa-chevron-right fa-2x"></i>
         </div>
       </div>
+      <% end %>
   </div>
 </div>
 
