--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -1,34 +1,30 @@
-<div class="container d-flex justify-content-center mt-3">
-  <div class="w-50">
-    <h1>マイページ</h1>
+<div class="container w-80">
+  <h1>マイページ</h1>
 
-    <hr>
+  <hr>
 
-    <%= link_to( mypost_user_path(current_user.id),class: "decoration change") do %>
-    <div class="container">
+  <%= link_to( mypost_user_path(current_user.id),class: "decoration change") do %>
     <div class="d-flex justify-content-between">
       <div class="row">
         <div class="col-2 d-flex align-items-center ">
           <i class="fas fa-user fa-3x", style="color:#7acbe1"></i>
         </div>
         <div class="col-9 d-flex align-items-center ml-2 mt-3 ">
-          <div class="d-flex flex-column", style="width: 300px; margin-left: 6px">
+          <div class="d-flex flex-column", style="margin-left: 13px">
             <label for="user-name">My posts</label>
             <p>投稿の内容を確認できます</p>
           </div>
         </div>
       </div>
       <div class="d-flex align-items-center">
-          <i class="fas fa-chevron-right fa-2x"></i>
+        <i class="fas fa-chevron-right fa-2x"></i>
       </div>
     </div>
-    </div>
-    <% end %>
+  <% end %>
 
-    <hr>
+  <hr>
 
-    <%= link_to( '#' , class: "decoration change") do %>
-    <div class="container">
+  <%= link_to( '#' , class: "decoration change") do %>
     <div class="d-flex justify-content-between">
       <div class="row">
         <div class="col-2 d-flex align-items-center">
@@ -45,56 +41,50 @@
           <i class="fas fa-chevron-right fa-2x"></i>
       </div>
     </div>
-    </div>
-    <% end %>
+  <% end %>
 
-    <hr>
+  <hr>
 
-    <%= link_to( '#', class: "decoration change") do %>
-    <div class="container">
-      <div class="d-flex justify-content-between">
-        <div class="row">
-          <div class="col-2 d-flex align-items-center">
-          <i class="fas fa-align-left fa-3x", style="color:#f0821e"></i>
-          </div>
-          <div class="col-9 d-flex align-items-center ml-3 mt-3">
-            <div class="d-flex flex-column", style="margin-left: 4px">
-              <label for="user-name">お気に入り一覧</label>
-              <p>お気に入りを確認できます</p>
-            </div>
-          </div>
+  <%= link_to( '#', class: "decoration change") do %>
+    <div class="d-flex justify-content-between">
+      <div class="row">
+        <div class="col-2 d-flex align-items-center">
+        <i class="fas fa-align-left fa-3x", style="color:#f0821e"></i>
         </div>
-        <div class="d-flex align-items-center">
-            <i class="fas fa-chevron-right fa-2x"></i>
+        <div class="col-9 d-flex align-items-center ml-3 mt-3">
+          <div class="d-flex flex-column", style="margin-left: 4px">
+            <label for="user-name">お気に入り一覧</label>
+            <p>お気に入りを確認できます</p>
+          </div>
         </div>
       </div>
-    </div>
-    <% end %>
-
-    <hr>
-
-    <%= link_to( destroy_user_session_path, method: :delete, class: "decoration change" ) do %>
-    <div class="container">
-      <div class="d-flex justify-content-between">
-        <div class="row">
-          <div class="col-2 d-flex align-items-center">
-            <i class="fas fa-sign-out-alt fa-3x", style="color:#FF0000"></i>
-          </div>
-          <div class="col-9 d-flex align-items-center ml-2 mt-3">
-            <div class="d-flex flex-column", style="margin-left: 23px">
-              <label for="user-name">ログアウト</label>
-              <p>ログアウトします</p>
-            </div>
-          </div>
-        </div>
-        <div class="d-flex align-items-center">
-            <i class="fas fa-chevron-right fa-2x"></i>
-        </div>
+      <div class="d-flex align-items-center">
+        <i class="fas fa-chevron-right fa-2x"></i>
       </div>
     </div>
-    <% end %>
+  <% end %>
 
-  </div>
+  <hr>
+
+  <%= link_to( destroy_user_session_path, method: :delete, class: "decoration change" ) do %>
+    <div class="d-flex justify-content-between">
+      <div class="row">
+        <div class="col-2 d-flex align-items-center">
+          <i class="fas fa-sign-out-alt fa-3x", style="color:#FF0000"></i>
+        </div>
+        <div class="col-9 d-flex align-items-center ml-2 mt-3">
+          <div class="d-flex flex-column", style="margin-left: 23px">
+            <label for="user-name">ログアウト</label>
+            <p>ログアウトします</p>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex align-items-center">
+        <i class="fas fa-chevron-right fa-2x"></i>
+      </div>
+    </div>
+  <% end %>
+
+
 </div>
-
 
