--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,5 +22,13 @@ header {
 }
 .traffic {
 font-size: 25px;
+}
 
+#page-active {
+    background-color: #007F5F;
+    border-color: #007F5F;
+}
+
+#page {
+    color: #007F5F;
 }
