--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -25,3 +25,12 @@ p{
   margin: 0; 
   padding: 0;
 }
+
+.about {
+  background:linear-gradient(transparent 70%, #FFFF3F 0%);
+  display: inline-block;
+}
+
+.description{
+  text-align: center;
+}
