--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,11 +4,11 @@
     <div class="col">
       <%= search_form_for @q, url: search_path do |f| %>
       <%= f.label :direction, '方面' %>
-      <%= f.select :direction, Post.directions.keys.map {|k| [k, k]}, {prompt:"選択してください"}, class: 'form-control' %>
+      <%= f.select :direction, Post.directions.keys.map {|k| [k, k]}, {prompt:"選択してください"}, {class: 'form-control', required: true } %>
     </div>
     <div class="col">
       <%= f.label :station_id, '駅名' %>
-      <%= f.collection_select :station_id, Station.all, :id, :station_name, {prompt:"選択してください"},  class: 'form-control' %>
+      <%= f.collection_select :station_id, Station.all, :id, :station_name, {prompt:"選択してください"}, {class: 'form-control', required: true }%>
     </div>
     <div class="col">
       <%= f.label :day_of_week, '曜日' %>
@@ -43,8 +43,8 @@
               <div><%= post.direction %>方面&ensp;
                 駅名:<%= post.station.station_name %>&ensp;
                 <%= post.time %>時頃</div>
-              <div>コメント:<%= post.comment %>&ensp;
-                混雑度:<%= post.congestion_level %></div>
+              <div>混雑度:<%= post.congestion_level %>&ensp;
+                コメント:<%= post.comment %></div>
             </li>
             <% end %>
           </div>
