--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,16 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <script src="https://kit.fontawesome.com/f9599ad223.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <%= render 'layouts/header' %>
   <% if notice %><p class='alert alert-warning'><%= notice %></div><% end %>
-  <% if alert %><p class='alert alert-danger'><%= alert %></p><% end %>
+    <% if alert %>
+  <p class='alert alert-danger'><%= alert %></p><% end %>
   <%= yield %>
 </body>
 
