--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,11 +1,13 @@
 <div class='container'>
-  <h2 class='text-center my-4'>「アプリ名」とは</h2>
+  <h2 class='text-center my-4'>「トレコミグラフ」とは</h2>
 
   <div class='row my-3'>
     <div class='col-md-6 my-auto'>
-      <h3 class="text-center">
-        電車の混み具合を確認・<br>投稿できるアプリです。
-      </h3><br><br>
+      <div class=" description">
+        <h3 class="about">電車の混み具合を確認・</h3>
+        <h3 class="about">投稿できるアプリです。</h3>
+        <br><br>
+      </div>
       <div class="row">
         <div class="col-1">
         </div>
@@ -33,28 +35,28 @@
         <div class='card-body'>
 
           <li class="list-group-item">
-            <div>名前：電車太郎</div>
-            <div>西武新宿方面&ensp;
-              駅名：上石神井 駅
-              8:00時頃</div>
-            <div>コメント：週明けとあって、中々混んでる
-              混雑度:混んでる</div>
+            <div>名前: 電車太郎</div>
+            <div><span class="mr-3">西武新宿方面</span><span class="mr-3">
+                上石神井駅</span>
+              <span>8:00時頃</span></div>
+            <div>混雑度: 座席の前で立てる</div>
+            <div>コメント: 週明けとあって、中々混んでる</div>
           </li>
           <li class="list-group-item">
-            <div>名前：鉄道一郎</div>
-            <div>本川越方面&ensp;
-              駅名：高田馬場 駅
-              14:00時頃</div>
-            <div>コメント：意外と座れる。
-              混雑度:混んでる</div>
+            <div>名前: 鉄道一郎</div>
+            <div><span class="mr-3">本川越方面</span><span class="mr-3">
+                高田馬場駅</span>
+              <span>14:00時頃</span></div>
+            <div>混雑度: 着席できる</div>
+            <div>コメント: 意外と座れる。</div>
           </li>
           <li class="list-group-item">
-            <div>名前：西武道雄</div>
-            <div>本川越方面&ensp;
-              駅名：西武新宿駅
-              18:00時頃</div>
-            <div>コメント: やっぱ、帰宅ラッシュだよねぇ
-              混雑度:混んでる</div>
+            <div>西武道雄</div>
+            <div><span class="mr-3">本川越方面</span><span class="mr-3">
+                西武新宿駅
+              </span><span>18:00時頃</span></div>
+            <div>混雑度: 立っているのがやっと</div>
+            <div>コメント: やっぱ、帰宅ラッシュだよねぇ</div>
           </li>
 
         </div>
@@ -66,9 +68,11 @@
         <div class="col-1">
         </div>
         <div class="col-10">
-          <h4 class='text-center'>
-            リアルタイムでユーザーの<br>投稿が反映されます！
-          </h4><br><br>
+          <div class="description">
+            <h4 class='about'>リアルタイムでユーザーの</h4>
+            <h4 class='about'>投稿が反映されます！</h4>
+            <br><br>
+          </div>
           <p>
             混み具合は５段階で。時間は1時間ごとに表示されるので、通勤やお出かけの際にチェックすると便利です！
           <p>・・アイコンを並べる予定・・・・・・</p>
