--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -1,9 +1,9 @@
 <% if page.current? %>
-  <li class="page-item active">
-    <%= content_tag :a, page, data: { remote: remote }, rel: page.rel, class: 'page-link' %>
-  </li>
+<li class="page-item active">
+  <%= content_tag :a, page, data: { remote: remote }, rel: page.rel, class: 'page-link', id: "page-active" %>
+</li>
 <% else %>
-  <li class="page-item">
-    <%= link_to page, url, remote: remote, rel: page.rel, class: 'page-link' %>
-  </li>
+<li class="page-item">
+  <%= link_to page, url, remote: remote, rel: page.rel, class: 'page-link', id: "page" %>
+</li>
 <% end %>
