--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,38 +1,40 @@
 <div class="container">
   <h1>混雑具合検索</h1>
   <div class="row">
-    <div class="col">
+    <div class="col-sm-3">
       <%= search_form_for @q, url: search_path do |f| %>
       <%= f.label :direction, '方面' %>
       <%= f.select :direction, Post.directions.keys.map {|k| [k, k]}, {prompt:"選択してください"}, class: 'form-control' %>
     </div>
-    <div class="col">
+    <div class="col-sm-3">
       <%= f.label :station_id, '駅名' %>
       <%= f.collection_select :station_id, Station.all, :id, :station_name, {prompt:"選択してください"},  class: 'form-control' %>
     </div>
-    <div class="col">
+    <div class="col-sm-3">
       <%= f.label :day_of_week, '曜日' %>
       <%= f.select :day_of_week, {'日曜': "日", '月曜': "月", '火曜': "火", '水曜': "水", '木曜': "木", '金曜': "金", '土曜': "土"}, { include_blank: '曜日を選択してください'}, { class: 'form-control' , required: true } %>
     </div>
+    <div class="col-sm-3 search_btm ">
     <%= f.submit '検索' %>
+    </div>
     <% end %>
   </div>
   <hr>
   <div class="row">
-    <div class="col-6 bgred">
+    <div class="col-md-6 bgred">
       <h3>人混み予測</h3>
       <%= column_chart @graph,
                 id: 'total-attendance-chart',
                 min: 0,
                 max: 5, 
-                width: '400px',
+                width: 'auto',
                 height: '500px',
                 xtitle: "時間帯", 
                 ytitle: "混雑状況",
                 colors: ['#9c6'] 
             %>
     </div>
-    <div class="col-6 bgred">
+    <div class="col-md-6 bgred">
       <h4 class="page-header text-center">最新投稿</h4>
       <ul class="list-group">
         <div class='card posts'>
