--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,7 +21,7 @@
   </div>
   <hr>
   <div class="row">
-    <div class="col-6 bgred graph">
+    <div class="col-md-6 col-sm-12 bgred graph mb-4">
       <h3>人混み予測</h3>
       <%= column_chart @graph,
                 id: 'total-attendance-chart',
