メイン画面に運行情報の表示を追加

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,6 +20,10 @@
     <% end %>
   </div>
   <hr>
+  <br>
+  <div class="traffic"><u>西武鉄道の運行状況：<%= @traffic %></u></div>
+  <br>
+  <hr>
   <div class="row">
     <div class="col-md-6 col-sm-12 bgred graph mb-4">
       <h3>人混み予測</h3>
