グラフの大きさ最適化

--- a/app/views/home/_graph.html.erb
+++ b/app/views/home/_graph.html.erb
@@ -3,9 +3,9 @@
                 id: 'total-attendance-chart',
                 min: 0,
                 max: 5, 
-                width: '400px',
-                height: '500px',
                 xtitle: "時間帯", 
                 ytitle: "混雑状況",
-                colors: ['#9c6'] 
+                colors: ['#9c6'],
+                loading: "Loading...",
+                empty:"投稿データがありません"
             %>
