--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,11 +31,11 @@
                 id: 'total-attendance-chart',
                 min: 0,
                 max: 5, 
-                width: 'auto',
-                height: '500px',
                 xtitle: "時間帯", 
                 ytitle: "混雑状況",
-                colors: ['#9c6'] 
+                colors: ['#9c6'],
+                loading: "Loading...",
+                empty:"投稿データがありません"
             %>
     </div>
     <div class="col-md-6 bgred">
