--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,3 +2,10 @@
   <h2 class="text-center">投稿する</h2>
   <%= render'layouts/post'%>
 </div>
+<script>
+$(".congestion_icons").click(function () {
+  $(this).css("filter", "opacity(100%)");
+  $(".congestion_icons").not(this).css("filter", "opacity(20%)");
+});
+
+</script>
