--- a/app/views/layouts/_post.html.erb
+++ b/app/views/layouts/_post.html.erb
@@ -24,7 +24,7 @@
     <%= f.date_field :date, value: Time.now.strftime("%Y-%m-%d"), class: 'form-control' %>
   </div>
   <div class="col-sm-10 col-md-4">
-    <%= f.label :time, "時間" %>
+    <%= f.label :time, "時間帯" %>
     <%= f.number_field :time, min: 0, max: 23, class: 'form-control', :placeholder => "時間帯を入力ください" %>
   </div>
 </div>
@@ -35,15 +35,18 @@
 
 <div class="col-md-8 justify-content-center mx-auto">
   <div class="row justify-content-center">
-    <%= image_tag "混雑1.jpg", alt:"混雑1", id: "0", class:"icon congestion_icons" %>
-    <%= image_tag "混雑2.jpg", alt:"混雑2", id: "1", class:"icon congestion_icons" %>
-    <%= image_tag "混雑3.jpg", alt:"混雑3", id: "2", class:"icon congestion_icons" %>
-    <%= image_tag "混雑4.jpg", alt:"混雑4", id: "3", class:"icon congestion_icons" %>
-    <%= image_tag "混雑5.jpg", alt:"混雑5", id: "4", class:"icon congestion_icons" %>
+    <%= image_tag "混雑1.jpg", id: "1", class:"icon congestion_icons", alt:"着席できる" %>
+    <%= image_tag "混雑2.jpg", id: "2", class:"icon congestion_icons", alt:"座れないが立って乗れる" %>
+    <%= image_tag "混雑3.jpg", id: "3", class:"icon congestion_icons", alt:"混雑しているがつり革は持てる" %>
+    <%= image_tag "混雑4.jpg", id: "4", class:"icon congestion_icons", alt:"ドア付近から動けないほど混雑している" %>
+    <%= image_tag "混雑5.jpg", id: "5", class:"icon congestion_icons", alt:"乗り切れない人がいるほど混雑している" %>
     <%= f.hidden_field :congestion_level, value: "", id: "value" %>
   </div>
 </div>
 
+<div class="row justify-content-center">
+  <p id="selected">混雑レベル</p>
+</div>
 
 <div class="row justify-content-center">
   <div class="col-sm-10 col-md-8">
